--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     implementation 'org.junit.platform:junit-platform-launcher:1.10.2'
 }
